@@ -359,7 +359,7 @@ void CProjectileHandler::Draw(bool drawReflection,bool drawRefraction)
 	Projectile_List::iterator psi;
 	distlist.clear();
 	for(psi=ps.begin();psi != ps.end();++psi){
-		if(camera->InView((*psi)->pos,(*psi)->drawRadius) && (gu->spectating || loshandler->InLos(*psi,gu->myAllyTeam) || ((*psi)->owner && gs->Ally((*psi)->owner->allyteam,gu->myAllyTeam)))){
+		if(camera->InView((*psi)->pos,(*psi)->drawRadius) && (gu->spectatingFullView || loshandler->InLos(*psi,gu->myAllyTeam) || ((*psi)->owner && gs->Ally((*psi)->owner->allyteam,gu->myAllyTeam)))){
 			if(drawReflection){
 				if((*psi)->pos.y < -(*psi)->drawRadius)
 					continue;
@@ -424,7 +424,8 @@ void CProjectileHandler::DrawShadowPass(void)
 	glEnable( GL_VERTEX_PROGRAM_ARB );
 	glDisable(GL_TEXTURE_2D);
 	for(psi=ps.begin();psi != ps.end();++psi){
-		if((loshandler->InLos(*psi,gu->myAllyTeam) || gu->spectating || ((*psi)->owner && gs->Ally((*psi)->owner->allyteam,gu->myAllyTeam)))){
+		if((loshandler->InLos(*psi,gu->myAllyTeam) || gu->spectatingFullView ||
+		   ((*psi)->owner && gs->Ally((*psi)->owner->allyteam,gu->myAllyTeam)))){
 			if((*psi)->s3domodel)
 				(*psi)->DrawUnitPart();
 			if((*psi)->castShadow){
@@ -567,7 +568,8 @@ void CProjectileHandler::DrawGroundFlashes(void)
 
 	std::vector<CGroundFlash*>::iterator gfi;
 	for(gfi=groundFlashes.begin();gfi!=groundFlashes.end();++gfi){
-		if ((*gfi)->alwaysVisible || gu->spectating || loshandler->InAirLos((*gfi)->pos,gu->myAllyTeam))
+		if ((*gfi)->alwaysVisible || gu->spectatingFullView ||
+		    loshandler->InAirLos((*gfi)->pos,gu->myAllyTeam))
 			(*gfi)->Draw();
 	}
 	CGroundFlash::va->DrawArrayTC(GL_QUADS);
